--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,11 +10,11 @@
 	<div class="container w-75">
 		<div class="py-5 text-center">
 			<h1>Tasks</h1>
-			<p class="lead">A very simple task management tool</p>
+			<p class="lead">A very simple task management tool!!OK</p>
 		</div>
 		<p class="alert alert-success" role="alert" th:if="${success != null}" th:text="${success}" id="message" />
 		<div th:switch="${todos.size()}">
-    		<h2 th:case="0">No tasks... enjoy your day!</h2>
+    		<h2 th:case="0">No tasks... enjoy your day!!!</h2>
         	<div th:case="*">
 				<table id="todoTable" class="table table-hover">
 					<thead class="thead-dark">
